--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,8 +71,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-bom:31.0.2'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.browser:browser:1.4.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.android.support.test:runner:1.0.2'
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.test:runner:1.5.0'
     implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
 }
