--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_native_splash: ^2.2.14
   dotted_border: ^2.0.0+3
   chips_choice: ^3.0.0
+  search_page: ^2.2.0
 
 dev_dependencies:
   flutter_test:
